--- a/index.html
+++ b/index.html
@@ -3,77 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>.gustav</title>
+    <title>Welcome</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        header {
-            background-color: #007bff;
-            color: #fff;
-            padding: 20px 0;
+            font-family: Arial, sans-serif;
+            background-image: url('background.jpg'); /* Replace 'background.jpg' with your actual background image */
+            background-size: cover;
+            background-position: center;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
             text-align: center;
         }
-        h1 {
-            margin: 0;
+        .title {
             font-size: 36px;
+            font-weight: bold;
+            color: white;
         }
-        nav {
-            text-align: center;
-            padding: 20px 0;
-            background-color: #333;
-        }
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            padding: 0 15px;
-        }
-        nav a:hover {
-            text-decoration: underline;
-        }
-        section {
-            padding: 20px;
-        }
-        .container {
-            max-width: 1200px;
-            margin: auto;
-        }
-        .portfolio-item {
-            margin-bottom: 30px;
-        }
-        .portfolio-item img {
-            width: 100%;
-            height: auto;
-        }
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 20px 0;
+        .subtitle {
+            font-size: 24px;
+            color: white;
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>My Portfolio</h1>
-    </header>
-    <nav>
-        <a href="#about">About</a>
-        <a href="#portfolio">Portfolio</a>
-        <a href="#contact">Contact</a>
-    </nav>
-    <section id="about">
-        <div class="container">
-            <h2>About Me</h2>
-            <p>Upcomming</p>
-        </div>
-    </section>
-    <section id="portfolio">
-        <div class="container">
-            <h2>Portfolio</h2>
-            <div class="portfolio-item">
-                <img
+    <div class="content">
+        <div class="title">Welcome</div>
+        <div class="subtitle">Thanks for visiting our website!</div>
+    </div>
+</body>
+</html>
