--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background-image: url('background.jpg'); /* Replace 'background.jpg' with your actual background image */
+            background-image: url('images\Background01.webp'); 
             background-size: cover;
             background-position: center;
             min-height: 100vh;
