--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background-image: url('images/Background01.webp'); /* Corrected path to the background image */
+            background-image: url('images/Background01.webp'); 
             background-size: cover;
             background-position: center;
             min-height: 100vh;
@@ -33,8 +33,10 @@
 </head>
 <body>
     <div class="content">
-        <div class="title">Welcome</div>
-        <div class="subtitle">Thanks for visiting our website!</div>
+        <div class="title">Welcome to My Portfolio</div>
+        <div class="subtitle">Aspiring Media Informatics Student</div>
+        <div class="message">Explore my projects, skills, and journey in media informatics.</div>
+    </div>
     </div>
 </body>
 </html>
