--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
             color: white;
             margin-top: 20px;
         }
+        .message {
+            font-size: 20px;
+            color: white;
+            margin-top: 30px;
+        }
     </style>
 </head>
 <body>
