--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
 						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
-						<a href="www.linkedin.com/in/gustav-schwarzbach-47239621b" class="icon brands fa-linkedin"><span>LinkedIn	</span></a>
+						<a href="www.linkedin.com/in/gustav-schwarzbach-47239621b" class="icon brands fa-linkedin" target="_blank"><span>LinkedIn</span></a>
+
 					</nav>
 
 				<!-- Main -->
