--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gustav Schwarzbach</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
     <style>
         body {
             display: flex;
@@ -35,10 +36,13 @@
 <body>
     <div class="container">
         <h1>Gustav Schwarzbach</h1>
-        <p>Medieninformatik-Student</p>
+        <p>
+            Medieninformatik-Student im 4. Semester an der HTW Dresden, Fakultät Informatik/Mathematik.
+        </p>
 
         <h2>Kontakt</h2>
         <a href="https://www.linkedin.com/in/gustav-schwarzbach-47239621b/" target="_blank">LinkedIn</a>
+        <a href="https://github.com/Gustav04szb" target="_blank">GitHub</a>
         <a href="https://discord.gg/VyhCjD9y" target="_blank">Discord</a>
         <a href="mailto:me@gustavSZB.com">me@gustavSZB.com</a>
     </div>
