--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         .container {
             max-width: 600px;
         }
+        .contact {
+            max-width: 400px;
+            max-height: 200px;
+        }
         h1 {
             margin-bottom: 0;
         }
