--- a/index.html
+++ b/index.html
@@ -17,10 +17,6 @@
         .container {
             max-width: 600px;
         }
-        .contact {
-            max-width: 400px;
-            max-height: 200px;
-        }
         h1 {
             margin-bottom: 0;
         }
@@ -31,6 +27,7 @@
         a {
             display: block;
             margin: 10px 0;
+            align-items: center;
             text-decoration: none;
             color: #0073b1;
             font-weight: bold;
@@ -43,8 +40,6 @@
         <p>
             Medieninformatik-Student im 4. Semester an der HTW Dresden, Fakultät Informatik/Mathematik.
         </p>
-    </div>
-    <div class="contact">
         <h2>Kontakt</h2>
         <a href="https://www.linkedin.com/in/gustav-schwarzbach-47239621b/" target="_blank">LinkedIn</a>
         <a href="https://github.com/Gustav04szb" target="_blank">GitHub</a>
