--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.png">
     <style>
         body {
-            display: flex;
+            display: grid;
+            grid-template: auto;
             justify-content: center;
             align-items: center;
             height: 100vh;
             text-align: center;
             font-family: Arial, sans-serif;
+
         }
         .container {
             max-width: 600px;
