--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
             display: grid;
-            grid-template: auto;
+            grid-template-columns: auto auto auto auto;
             justify-content: center;
             align-items: center;
             height: 100vh;
