--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
             height: 100vh;
             text-align: center;
             font-family: Arial, sans-serif;
-
         }
         .container {
             max-width: 600px;
@@ -42,6 +41,8 @@
         <p>
             Medieninformatik-Student im 4. Semester an der HTW Dresden, Fakultät Informatik/Mathematik.
         </p>
+    </div>
+    <div class="container">
         <h2>Kontakt</h2>
         <a href="https://www.linkedin.com/in/gustav-schwarzbach-47239621b/" target="_blank">LinkedIn</a>
         <a href="https://github.com/Gustav04szb" target="_blank">GitHub</a>
