--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.png">
     <style>
         body {
-            display: grid;
-            grid-template-rows: auto auto;
+            display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
@@ -17,6 +17,7 @@
         }
         .container {
             max-width: 600px;
+            margin-bottom: 20px;
         }
         h1 {
             margin-bottom: 0;
@@ -25,29 +26,38 @@
             color: gray;
             font-size: 1.2em;
         }
+        .links {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 10px;
+        }
         a {
-            display: block;
-            margin: 10px 0;
-            align-items: center;
             text-decoration: none;
             color: #0073b1;
             font-weight: bold;
+            padding: 10px;
+            border-radius: 5px;
+            transition: background 0.3s;
+        }
+        a:hover {
+            background: #f0f0f0;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Gustav Schwarzbach</h1>
-        <p>
-            Medieninformatik-Student im 4. Semester an der HTW Dresden, Fakultät Informatik/Mathematik.
-        </p>
+        <p>Medieninformatik-Student im 4. Semester an der HTW Dresden, Fakultät Informatik/Mathematik.</p>
     </div>
     <div class="container">
         <h2>Kontakt</h2>
-        <a href="https://www.linkedin.com/in/gustav-schwarzbach-47239621b/" target="_blank">LinkedIn</a>
-        <a href="https://github.com/Gustav04szb" target="_blank">GitHub</a>
-        <a href="https://discord.gg/VyhCjD9y" target="_blank">Discord</a>
-        <a href="mailto:me@gustavSZB.com">me@gustavSZB.com</a>
+        <div class="links">
+            <a href="https://www.linkedin.com/in/gustav-schwarzbach-47239621b/" target="_blank">LinkedIn</a>
+            <a href="https://github.com/Gustav04szb" target="_blank">GitHub</a>
+            <a href="https://discord.gg/VyhCjD9y" target="_blank">Discord</a>
+            <a href="mailto:me@gustavSZB.com">Mail</a>
+        </div>
     </div>
 </body>
 </html>
