--- a/index.html
+++ b/index.html
@@ -4,60 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gustav Schwarzbach</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
-    <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            text-align: center;
-            font-family: Arial, sans-serif;
-        }
-        .container {
-            max-width: 600px;
-            margin-bottom: 20px;
-        }
-        h1 {
-            margin-bottom: 0;
-        }
-        p {
-            color: gray;
-            font-size: 1.2em;
-        }
-        .links {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-top: 10px;
-        }
-        a {
-            text-decoration: none;
-            color: #0073b1;
-            font-weight: bold;
-            padding: 10px;
-            border-radius: 5px;
-            transition: background 0.3s;
-        }
-        a:hover {
-            background: #f0f0f0;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<div class="content">
     <div class="container">
         <h1>Gustav Schwarzbach</h1>
         <p>Medieninformatik-Student im 4. Semester an der HTW Dresden, Fakultät Informatik/Mathematik.</p>
     </div>
-    <div class="container">
-        <h2>Kontakt</h2>
-        <div class="links">
-            <a href="https://www.linkedin.com/in/gustav-schwarzbach-47239621b/" target="_blank">LinkedIn</a>
-            <a href="https://github.com/Gustav04szb" target="_blank">GitHub</a>
-            <a href="https://discord.gg/VyhCjD9y" target="_blank">Discord</a>
-            <a href="mailto:me@gustavSZB.com">Mail</a>
-        </div>
+
+    <div class="container-row">
+        <a href="gallery_1.html" class="box">Projekt 1</a>
+        <a href="gallery_2.html" class="box">Projekt 2</a>
+        <a href="gallery_3.html" class="box">Projekt 3</a>
     </div>
+</div>
+
+<footer>
+    <h2>Kontakt</h2>
+    <div class="links">
+        <a href="https://www.linkedin.com/in/gustav-schwarzbach-47239621b/" target="_blank">LinkedIn</a>
+        <a href="https://github.com/Gustav04szb" target="_blank">GitHub</a>
+        <a href="https://discord.gg/VyhCjD9y" target="_blank">Discord</a>
+        <a href="mailto:me@gustavSZB.com">Mail</a>
+    </div>
+    <div>© 2024 Gustav Schwarzbach. Alle Rechte vorbehalten.</div>
+</footer>
 </body>
 </html>
