Update - Work in progress

--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 <div class="content">
     <div class="container">
         <h1>Gustav Schwarzbach</h1>
-        <p>Medieninformatik-Student im 4. Semester an der HTW Dresden, Fakultät Informatik/Mathematik.</p>
+        <p>Media Informatics student in the 4th semester at the HTW Dresden, Faculty of Computer Science/Mathematics.</p>
     </div>
 
     <div class="container-row">
-        <a href="gallery_1.html" class="box">Projekt 1</a>
-        <a href="gallery_2.html" class="box">Projekt 2</a>
-        <a href="gallery_3.html" class="box">Projekt 3</a>
+        <a href="gallery_1.html" class="box">First Semester Work</a>
+        <a href="gallery_2.html" class="box">Second Semester Work</a>
+        <a href="gallery_3.html" class="box">Third Semester Work</a>
     </div>
 </div>
 
 <footer>
-    <h2>Kontakt</h2>
+    <h2>Contact</h2>
     <div class="links">
         <a href="https://www.linkedin.com/in/gustav-schwarzbach-47239621b/" target="_blank">LinkedIn</a>
         <a href="https://github.com/Gustav04szb" target="_blank">GitHub</a>
