--- a/gallery_1.html
+++ b/gallery_1.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projekt 1</title>
+    <title>GS | Gallery | Page 1</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <div class="content">
-    <h1>Projekt 1 - Galerie</h1>
+    <h1>First Semester - Gallery</h1>
     <div class="grid">
-        <img src="images/work1_thumb.png" alt="Vorschau 1" class="thumbnail" onclick="openFullscreen('images/Schwarzbach-Gustav_Kaufmann.png')">
-        <img src="images/work1_2_thumb.png" alt="Vorschau 2" class="thumbnail" onclick="openFullscreen('images/work1_2_full.png')">
-        <img src="images/work1_3_thumb.png" alt="Vorschau 3" class="thumbnail" onclick="openFullscreen('images/work1_3_full.png')">
+        <img src="images/first_sem/Beleg.png" alt="Vorschau 1" class="thumbnail" onclick="openFullscreen('images/first_sem/Beleg.png')">
+        <img src="images/first_sem/Beleg2.png" alt="Vorschau 2" class="thumbnail" onclick="openFullscreen('images/first_sem/Beleg2.png')">
+        <img src="images/first_sem/Beleg5.png" alt="Vorschau 3" class="thumbnail" onclick="openFullscreen('images/first_sem/Beleg5.png')">
+        <img src="images/first_sem/Beleg3.png" alt="Vorschau 3" class="thumbnail" onclick="openFullscreen('images/first_sem/Beleg3.png')">
+        <img src="images/first_sem/Beleg4.png" alt="Vorschau 3" class="thumbnail" onclick="openFullscreen('images/first_sem/Beleg4.png')">
     </div>
-    <a href="index.html" class="back">Zurück zur Hauptseite</a>
+    <a href="index.html" class="back">Back</a>
 </div>
 
 <!-- Vollbild Container -->
