Update - Work in progress

--- a/gallery_2.html
+++ b/gallery_2.html
@@ -3,27 +3,60 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projekt 1</title>
+  <title>GS | Second Semester</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <div class="content">
-  <h1>Projekt 1 - Galerie</h1>
+  <h1>Second Semester - Gallery</h1>
+  <h2>Modul: Design of interactive interfaces</h2>
   <div class="grid">
-    <a href="images/work1_full.png" target="_blank">
-      <img src="images/work1_thumb.png" alt="Vorschau 1">
-    </a>
-    <a href="images/work1_2_full.png" target="_blank">
-      <img src="images/work1_2_thumb.png" alt="Vorschau 2">
-    </a>
-    <a href="images/work1_3_full.png" target="_blank">
-      <img src="images/work1_3_thumb.png" alt="Vorschau 3">
-    </a>
+    <img src="images/second_sem/GIO/JK_FORUM_Forum.svg" alt="Assignment" class="thumbnail" onclick="openFullscreen('images/second_sem/GIO/JK_FORUM_Forum.svg')">
+    <img src="images/second_sem/GIO/GS.png" alt="Assignment" class="thumbnail" onclick="openFullscreen('images/second_sem/GIO/GS.png')">
+    <img src="images/second_sem/GIO/Wehlen@2x.png" alt="assignment" class="thumbnail" onclick="openFullscreen('images/second_sem/GIO/Wehlen@2x.png')">
+    <img src="images/second_sem/GIO/NFS_Beleg.svg" alt="assignment" class="thumbnail" onclick="openFullscreen('images/second_sem/GIO/NFS_Beleg.svg')">
+    <div class="text-container">
+      <p>
+        In this module, we had the task of adding a forum to the website of Jonas Kaufman,
+        redesigning the website of Günter Schlute, as well as redesigning the website of the city of Wehlen.
+        At the end, we were tasked with creating a website design for the project Nature Meets City.
+      </p>
+    </div>
   </div>
-  <a href="index.html" class="back">Zurück zur Hauptseite</a>
+
+  <h2>Modul: Programming II</h2>
+  <div class="grid">
+    <img src="images/second_sem/prog/Menu.png" alt="Assignment" class="thumbnail" onclick="openFullscreen(this.src)">
+    <img src="images/second_sem/prog/Load.png" alt="Assignment" class="thumbnail" onclick="openFullscreen(this.src)">
+    <img src="images/second_sem/prog/Instructions.png" alt="assignment" class="thumbnail" onclick="openFullscreen(this.src)">
+    <img src="images/second_sem/prog/SinglePlayer.png" alt="assignment" class="thumbnail" onclick="openFullscreen(this.src)">
+    <img src="images/second_sem/prog/Multiplayer.png" alt="assignment" class="thumbnail" onclick="openFullscreen(this.src)">
+    <img src="images/second_sem/prog/save.png" alt="assignment" class="thumbnail" onclick="openFullscreen(this.src)">
+    <div class="text-container">
+      <p>
+        In this module, we were tasked with programming Connect Four in C++,<br> which we had previously programmed in C.
+        <a class="links" style="margin: 0px;" href="https://github.com/Gustav04szb/ConnectFour-VisualCPP/tree/main/Kunde">Find the game here!</a>
+      </p>
+
+    </div>
+  </div>
+
+
 </div>
+
+
+
+<!-- Vollbild Container -->
+<div id="fullscreen-container" style="display: none;">
+  <button id="prev-button" class="nav-button">←</button>
+  <img id="fullscreen-image" />
+  <button id="next-button" class="nav-button">→</button>
+  <button id="back-button" onclick="closeFullscreen()">← Back</button>
+</div>
+<script src="scripts.js"></script>
 </body>
+
 <footer>
-  <div>© 2024 Gustav Schwarzbach. Alle Rechte vorbehalten.</div>
+  <a href="index.html" class="back-button">Back</a>
 </footer>
 </html>
