--- a/gallery_1.html
+++ b/gallery_1.html
@@ -3,27 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GS | Gallery | Page 1</title>
+    <title>GS | First Semester </title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <div class="content">
     <h1>First Semester - Gallery</h1>
+    <h2>Modul: Basics of design</h2>
+    <p></p>
     <div class="grid">
-        <img src="images/first_sem/Beleg.png" alt="Vorschau 1" class="thumbnail" onclick="openFullscreen('images/first_sem/Beleg.png')">
-        <img src="images/first_sem/Beleg2.png" alt="Vorschau 2" class="thumbnail" onclick="openFullscreen('images/first_sem/Beleg2.png')">
-        <img src="images/first_sem/Beleg5.png" alt="Vorschau 3" class="thumbnail" onclick="openFullscreen('images/first_sem/Beleg5.png')">
-        <img src="images/first_sem/Beleg3.png" alt="Vorschau 3" class="thumbnail" onclick="openFullscreen('images/first_sem/Beleg3.png')">
-        <img src="images/first_sem/Beleg4.png" alt="Vorschau 3" class="thumbnail" onclick="openFullscreen('images/first_sem/Beleg4.png')">
+        <img src="images/first_sem/Beleg.png" alt="Assignment"  class="thumbnail" onclick="openFullscreen(this.src)">
+        <img src="images/first_sem/Beleg2.png" alt="Assignment" class="thumbnail" onclick="openFullscreen(this.src)">
+        <img src="images/first_sem/Beleg5.png" alt="assignment" class="thumbnail" onclick="openFullscreen(this.src)">
+        <img src="images/first_sem/Beleg3.png" alt="assignment" class="thumbnail" onclick="openFullscreen(this.src)">
+        <img src="images/first_sem/Beleg4.png" alt="assignment" class="thumbnail" onclick="openFullscreen(this.src)">
+        <div class="text-container">
+            <p>
+                In my first semester, I had the assignment to create a website in InDesign, following the design principles I had learned.
+            </p>
+        </div>
     </div>
-    <a href="index.html" class="back">Back</a>
 </div>
 
 <!-- Vollbild Container -->
-<div id="fullscreen-container" class="fullscreen-container" onclick="closeFullscreen()">
-    <img id="fullscreen-image" src="" alt="Vollbild">
+<div id="fullscreen-container" style="display: none;">
+    <button id="prev-button" class="nav-button">←</button>
+    <img id="fullscreen-image" />
+    <button id="next-button" class="nav-button">→</button>
+    <button id="back-button" onclick="closeFullscreen()">← Back</button>
 </div>
-
 <script src="scripts.js"></script>
 </body>
+<footer>
+    <a href="index.html" class="back-button">Back</a>
+</footer>
 </html>
