Updated LinkedIn link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <footer>
         <h2>Contact</h2>
         <div class="links">
-            <a href="https://www.linkedin.com/in/gustav-schwarzbach-47239621b/" target="_blank">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/gustavszb/" target="_blank">LinkedIn</a>
             <a href="https://github.com/Gustav04szb" target="_blank">GitHub</a>
             <a href="https://discord.gg/VyhCjD9y" target="_blank">Discord</a>
             <a href="mailto:me@gustavSZB.com">Mail</a>
