--- a/site/gallery_1.html
+++ b/site/gallery_1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GS | First Semester </title>
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -34,7 +34,7 @@
         <button id="next-button" class="nav-button">→</button>
         <button id="back-button" onclick="closeFullscreen()">← Back</button>
     </div>
-    <script src="../scripts.js"></script>
+    <script src="scripts.js"></script>
     <footer>
         <div>© 2024 Gustav Schwarzbach. Alle Rechte vorbehalten.</div>
     </footer>
