Added meta tags to the index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gustav Schwarzbach</title>
+
+    <!-- Beschreibung & SEO -->
+    <meta name="description" content="Digital portfolio by Gustav Schwarzbach – student of Media Informatics with projects in game design, UI, and programming.">
+    <meta name="author" content="Gustav Schwarzbach">
+
+    <!-- Theme Farbe (für Mobile Browser & PWA) -->
+    <meta name="theme-color" content="#07000d">
+
+    <!-- Web App Manifest -->
+    <link rel="manifest" href="manifest.webmanifest">
+
+    <!-- Favicon (kann auch ein Logo sein) -->
+    <link rel="icon" href="icons/icon-192.png" type="image/png">
+
+    <!-- Social Media Vorschau -->
+    <meta property="og:title" content="Gustav Schwarzbach – Portfolio">
+    <meta property="og:description" content="Explore game design, creative coding and UI/UX projects.">
+    <meta property="og:image" content="https://gustavszb.github.io/icons/icon-512.png">
+    <meta property="og:url" content="https://gustavszb.github.io/">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Gustav Schwarzbach – Portfolio">
+    <meta name="twitter:description" content="Explore game design, creative coding and UI/UX projects.">
+    <meta name="twitter:image" content="https://gustavszb.github.io/icons/icon-512.png">
+
+    <!-- Fonts & Styles -->
     <link rel="stylesheet" href="site/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet">
 </head>
