--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="manifest" href="manifest.webmanifest">
 
     <!-- Favicon (kann auch ein Logo sein) -->
-    <link rel="icon" href="icons/icon-192.png" type="image/png">
+    <link rel="icon" href="site/images/favicon.png" type="image/png">
 
     <!-- Social Media Vorschau -->
     <meta property="og:title" content="Gustav Schwarzbach – Portfolio">
