--- a/site/gallery_3.html
+++ b/site/gallery_3.html
@@ -3,7 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GS | Third Semester</title>
+  <title>Gustav Schwarzbach – Portfolio</title>
+
+  <!-- SEO & Meta Info -->
+  <meta name="description" content="Digital portfolio by Gustav Schwarzbach – showcasing creative work, game assets, renders, and university projects.">
+  <meta name="author" content="Gustav Schwarzbach">
+  <meta name="theme-color" content="#07000d">
+
+  <!-- PWA Manifest -->
+  <link rel="manifest" href="../manifest.webmanifest">
+
+  <!-- Favicon -->
+  <link rel="icon" href="icons/icon-192.png" type="image/png">
+
+  <!-- Open Graph / Social Preview -->
+  <meta property="og:title" content="Gustav Schwarzbach – Portfolio">
+  <meta property="og:description" content="Creative coding, game design, 3D renders, and academic work.">
+  <meta property="og:image" content="https://gustavszb.github.io/icons/icon-512.png">
+  <meta property="og:url" content="https://gustavszb.github.io">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Gustav Schwarzbach – Portfolio">
+  <meta name="twitter:description" content="Explore Gustav’s creative and academic projects.">
+  <meta name="twitter:image" content="https://gustavszb.github.io/icons/icon-512.png">
+
+  <!-- Styles & Fonts -->
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet">
 </head>
