--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Social Media Vorschau -->
     <meta property="og:title" content="Gustav Schwarzbach – Portfolio">
     <meta property="og:description" content="Explore game design, creative coding and UI/UX projects.">
-    <meta property="og:image" content="https://gustavszb.github.io/icons/icon-512.png">
+    <meta property="og:image" content="https://gustavszb.github.io/site/icons/icon-512.png">
     <meta property="og:url" content="https://gustavszb.github.io/">
     <meta property="og:type" content="website">
 
