Fixed Icons and links

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <!-- Social Media Vorschau -->
     <meta property="og:title" content="Gustav Schwarzbach – Portfolio">
     <meta property="og:description" content="Explore game design, creative coding and UI/UX projects.">
-    <meta property="og:image" content="https://gustavszb.github.io/site/icons/icon-512.png">
-    <meta property="og:url" content="https://gustavszb.github.io/">
+    <meta property="og:image" content="https://gustavszb.com/site/icons/icon-512.png">
+    <meta property="og:url" content="https://gustavszb.com/">
     <meta property="og:type" content="website">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Gustav Schwarzbach – Portfolio">
     <meta name="twitter:description" content="Explore game design, creative coding and UI/UX projects.">
-    <meta name="twitter:image" content="https://gustavszb.github.io/icons/icon-512.png">
+    <meta name="twitter:image" content="https://gustavszb.com/icons/icon-512.png">
 
     <!-- Fonts & Styles -->
     <link rel="stylesheet" href="site/styles.css">
