--- a/site/gallery_4.html
+++ b/site/gallery_4.html
@@ -18,16 +18,15 @@
 
     <!-- Open Graph / Social Preview -->
     <meta property="og:title" content="Gustav Schwarzbach – Portfolio">
-    <meta property="og:description" content="Creative coding, game design, 3D renders, and academic work.">
-    <meta property="og:image" content="https://gustavszb.github.io/icons/icon-512.png">
-    <meta property="og:url" content="https://gustavszb.github.io">
+    <meta property="og:description" content="Explore game design, creative coding and UI/UX projects.">
+    <meta property="og:image" content="https://gustavszb.com/site/icons/icon-512.png">
+    <meta property="og:url" content="https://gustavszb.com/">
     <meta property="og:type" content="website">
 
-    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Gustav Schwarzbach – Portfolio">
-    <meta name="twitter:description" content="Explore Gustav’s creative and academic projects.">
-    <meta name="twitter:image" content="https://gustavszb.github.io/icons/icon-512.png">
+    <meta name="twitter:description" content="Explore game design, creative coding and UI/UX projects.">
+    <meta name="twitter:image" content="https://gustavszb.com/icons/icon-512.png">
 
     <!-- Styles & Fonts -->
     <link rel="stylesheet" href="styles.css">
