--- a/site/gallery_2.html
+++ b/site/gallery_2.html
@@ -26,7 +26,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Gustav Schwarzbach – Portfolio">
   <meta name="twitter:description" content="Explore game design, creative coding and UI/UX projects.">
-  <meta name="twitter:image" content="https://gustavszb.com/icons/icon-512.png">
+  <meta name="twitter:image" content="https://gustavszb.com/site/icons/icon-512.png">
 
   <!-- Styles & Fonts -->
   <link rel="stylesheet" href="styles.css">
