--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +8,7 @@
     <!-- Beschreibung & SEO -->
     <meta name="description" content="Digital portfolio by Gustav Schwarzbach – student of Media Informatics with projects in game design, UI, and programming.">
     <meta name="author" content="Gustav Schwarzbach">
+    <meta name="theme-color" content="#07000d">
 
     <!-- Theme Farbe (für Mobile Browser & PWA) -->
     <meta name="theme-color" content="#07000d">
@@ -18,7 +19,7 @@
     <!-- Favicon (kann auch ein Logo sein) -->
     <link rel="icon" href="site/icons/icon-192.png" type="image/png">
 
-    <!-- Social Media Vorschau -->
+    <!-- Open Graph / Social Preview -->
     <meta property="og:title" content="Gustav Schwarzbach – Portfolio">
     <meta property="og:description" content="Explore game design, creative coding and UI/UX projects.">
     <meta property="og:image" content="https://gustavszb.com/site/icons/icon-512.png">
