--- a/site/gallery_2.html
+++ b/site/gallery_2.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gustav Schwarzbach – Portfolio</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gustav Schwarzbach – Portfolio</title>
 
-  <!-- SEO & Meta Info -->
-  <meta name="description" content="Digital portfolio by Gustav Schwarzbach – showcasing creative work, game assets, renders, and university projects.">
-  <meta name="author" content="Gustav Schwarzbach">
-  <meta name="theme-color" content="#07000d">
+    <!-- SEO & Meta Info -->
+    <meta name="description" content="Digital portfolio by Gustav Schwarzbach – showcasing creative work, game assets, renders, and university projects.">
+    <meta name="author" content="Gustav Schwarzbach">
+    <meta name="theme-color" content="#07000d">
 
-  <!-- PWA Manifest -->
-  <link rel="manifest" href="../manifest.webmanifest">
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="../manifest.webmanifest">
 
-  <!-- Favicon -->
-  <link rel="icon" href="icons/icon-192.png" type="image/png">
+    <!-- Favicon -->
+    <link rel="icon" href="icons/icon-192.png" type="image/png">
 
-  <!-- Open Graph / Social Preview -->
-  <meta property="og:title" content="Gustav Schwarzbach – Portfolio">
-  <meta property="og:description" content="Explore game design, creative coding and UI/UX projects.">
-  <meta property="og:image" content="https://gustavszb.com/site/icons/icon-512.png">
-  <meta property="og:url" content="https://gustavszb.com/">
-  <meta property="og:type" content="website">
+    <!-- Open Graph / Social Preview -->
+    <meta property="og:title" content="Gustav Schwarzbach – Portfolio">
+    <meta property="og:description" content="Explore game design, creative coding and UI/UX projects.">
+    <meta property="og:image" content="https://gustavszb.com/site/icons/icon-512.png">
+    <meta property="og:url" content="https://gustavszb.com/">
+    <meta property="og:type" content="website">
 
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Gustav Schwarzbach – Portfolio">
-  <meta name="twitter:description" content="Explore game design, creative coding and UI/UX projects.">
-  <meta name="twitter:image" content="https://gustavszb.com/site/icons/icon-512.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Gustav Schwarzbach – Portfolio">
+    <meta name="twitter:description" content="Explore game design, creative coding and UI/UX projects.">
+    <meta name="twitter:image" content="https://gustavszb.com/site/icons/icon-512.png">
 
-  <!-- Styles & Fonts -->
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet">
+    <!-- Styles & Fonts -->
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet">
 </head>
 <body>
 <a href="../index.html" class="floating-back-button">← Back</a>
