--- a/site/gallery_4.html
+++ b/site/gallery_4.html
@@ -70,10 +70,12 @@
         </div>
         <h2>Game Content Creation</h2>
         <h3>My work for Forward Assault</h3>
-        <p class="text-container">
-            Among other creative projects, I designed custom weapon skins for the mobile shooter game Forward Assault. <br>
-            My focus was on creating visually appealing designs that fit the game's aesthetic and style.
-        </p>
+        <div class="grid" style="grid-template-columns: repeat(1, 1fr);">
+            <p class="text-container">
+                Among other creative projects, I designed custom weapon skins for the mobile shooter game Forward Assault. <br>
+                My focus was on creating visually appealing designs that fit the game's aesthetic and style.
+            </p>
+        </div>
         <h3>Social media renders</h3>
         <div class="grid">
             <img src="thumbnails/other_projects/ForwardAssault/5%20Ts.png" alt="Design" class="thumbnail" onclick="openFullscreen(this.src)">
@@ -82,7 +84,6 @@
             <img src="thumbnails/other_projects/ForwardAssault/Banner/Halloween%20banner.png" alt="Halloween Banner" class="thumbnail" onclick="openFullscreen(this.src)">
             <img src="thumbnails/other_projects/ForwardAssault/Banner/NewZear2.1.png" alt="New Year Banner" class="thumbnail" onclick="openFullscreen(this.src)">
             <img src="thumbnails/other_projects/ForwardAssault/Banner/SnowFun10mb.png" alt="Winter Banner" class="thumbnail" onclick="openFullscreen(this.src)">
-            <img src="thumbnails/other_projects/ForwardAssault/Skins/offers/Offer.png" alt="Offer" class="thumbnail" onclick="openFullscreen(this.src)">
             <div class="text-container">
                 <p>
                     I worked with the Forward Assault team for a while, during which I managed the game's social media platforms and learned a lot about rendering and visual presentation.
@@ -98,17 +99,22 @@
             <img src="thumbnails/other_projects/ForwardAssault/Store_page/Store-Skins-Final.png" alt="Final main" class="thumbnail" onclick="openFullscreen(this.src)">
             <div class="text-container">
                 <p>
-                    During my time at Blayze Games, I was tasked with creating new promotional images for the store page of Forward Assault.
-                    At the time, I was new to Blender and Photoshop, but through this experience, I learned a lot and significantly improved my rendering and editing skills, something that now reflects clearly in my current work.
-                    <a class="links" style="margin: 0px;" href="https://apps.apple.com/app/forward-assault/id1219930482" target="_blank">Forward Assault on iOS</a><br>
+                    <a class="links" style="margin: 0px;" href="https://apps.apple.com/app/forward-assault/id1219930482" target="_blank">Forward Assault on iOS</a>
                     <a class="links" style="margin: 0px;" href="https://play.google.com/store/apps/details?id=com.blayzegames.newfps" target="_blank">Forward Assault on Android</a>
                 </p>
+            </div>
+            <div class="text-container">
+                <p>
+                    During my time at Blayze Games, I was tasked with creating new promotional images for the store page of Forward Assault.
+                    At the time, I was new to Blender and Photoshop, but through this experience, I learned a lot and significantly improved my rendering and editing skills, something that now reflects clearly in my current work.
+                    </p>
             </div>
 
         </div>
 
         <h3>Skin Renders</h3>
         <div class="grid">
+            <img src="thumbnails/other_projects/ForwardAssault/Skins/offers/Offer.png" alt="Offer" class="thumbnail" onclick="openFullscreen(this.src)">
             <img src="thumbnails/other_projects/ForwardAssault/Skins/Glove/blossom_PR_1.png" alt="blossom gloves" class="thumbnail" onclick="openFullscreen(this.src)">
             <img src="thumbnails/other_projects/ForwardAssault/Skins/Glove/blossom_PR_2.png" alt="blossom gloves" class="thumbnail" onclick="openFullscreen(this.src)">
             <img src="thumbnails/other_projects/ForwardAssault/Skins/Glove/Grafitti_PR_1.png" alt="Grafitti gloves" class="thumbnail" onclick="openFullscreen(this.src)">
