--- a/site/gallery_4.html
+++ b/site/gallery_4.html
@@ -70,9 +70,9 @@
         </div>
         <h2>Game Content Creation</h2>
         <h3>My work for Forward Assault</h3>
-        <div class="grid" style="grid-template-columns: repeat(1, 1fr);">
+        <div class="grid" style="grid-template-columns: repeat(1, 1fr); text-align: center;">
             <p class="text-container">
-                Among other creative projects, I designed custom weapon skins for the mobile shooter game Forward Assault. <br>
+                Among other creative projects, I designed custom weapon skins for the mobile shooter game Forward Assault.
                 My focus was on creating visually appealing designs that fit the game's aesthetic and style.
             </p>
         </div>
@@ -99,8 +99,8 @@
             <img src="thumbnails/other_projects/ForwardAssault/Store_page/Store-Skins-Final.png" alt="Final main" class="thumbnail" onclick="openFullscreen(this.src)">
             <div class="text-container">
                 <p>
-                    <a class="links" style="margin: 0px;" href="https://apps.apple.com/app/forward-assault/id1219930482" target="_blank">Forward Assault on iOS</a>
-                    <a class="links" style="margin: 0px;" href="https://play.google.com/store/apps/details?id=com.blayzegames.newfps" target="_blank">Forward Assault on Android</a>
+                    <a class="links" style="margin: 0%;" href="https://apps.apple.com/app/forward-assault/id1219930482" target="_blank">Forward Assault on iOS</a>
+                    <a class="links" style="margin: 0%;" href="https://play.google.com/store/apps/details?id=com.blayzegames.newfps" target="_blank">Forward Assault on Android</a>
                 </p>
             </div>
             <div class="text-container">
@@ -154,7 +154,7 @@
     <!-- Vollbild Container -->
     <div id="fullscreen-container" style="display: none;">
         <button id="prev-button" class="nav-button">←</button>
-        <img id="fullscreen-image" />
+        <img id="fullscreen-image"/>
         <button id="next-button" class="nav-button">→</button>
         <button id="back-button" onclick="closeFullscreen()">← Back</button>
     </div>
