--- a/site/gallery_3.html
+++ b/site/gallery_3.html
@@ -64,10 +64,17 @@
           In this module, we learned a lot about different multimodal interactions.
           Our final assignment was to create a multimodal application.
           My group decided on creating a Flappy Bird-like game, programmed in Java using the Processing library, that is controlled with voice, hand, or mouse (only in the menu)<br>
-          <a class="links" href="https://youtu.be/DHmqYVinogw">View Handbird Demo</a>
         </p>
       </div>
+      <div class="video-container">
+        <a> View Handbird Demo</a>
+        <video controls>
+          <source src="video/Handbird%20Demo.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+      </div>
     </div>
+
   </div>
 
   <!-- Vollbild Container -->
