--- a/site/gallery_3.html
+++ b/site/gallery_3.html
@@ -67,9 +67,9 @@
         </p>
       </div>
       <div class="video-container">
-        <a> View Handbird Demo</a>
-        <video controls>
-          <source src="video/Handbird%20Demo.mp4" type="video/mp4">
+        <a>Handbird Demo</a>
+        <video autoplay muted loop controls>
+          <source src="video/HandBirdDemo.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
       </div>
